PPL_assignment1/initial/target/main/mc/parser/MCParser.py
# Generated from main/mc/parser/MC.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'boolean'", "'break'", "'continue'", "'else'", "'for'", 
                     "'float'", "'if'", "'int'", "'return'", "'void'", "'do'", 
                     "'while'", "'true'", "'false'", "'string'", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'||'", "'&&'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'='", 
                     "'['", "']'", "'('", "')'", "'{'", "'}'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "WS", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "BOOLEAN", "BREAK", "CONTINUE", "ELSE", "FOR", "FLOAT", 
                      "IF", "INT", "RETURN", "VOID", "DO", "WHILE", "TRUE", 
                      "FALSE", "STRING", "ID", "ADD", "SUB", "MUL", "DIV", 
                      "MOD", "LOG_NOT", "LOG_OR", "LOG_AND", "EQUAL", "NOT_EQUAL", 
                      "LESS", "LESS_EQ", "GREATER", "GREATER_EQ", "ASSIGN", 
                      "LS", "RS", "LB", "RB", "LP", "RP", "SEMI", "CM", 
                      "INTLIT", "FLOATLIT", "BOOLLIT", "STRLIT", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_var_decl = 1
    RULE_mctype = 2
    RULE_arr_one = 3
    RULE_func_decl = 4
    RULE_types = 5
    RULE_arr_ptr = 6
    RULE_para_decl_list = 7
    RULE_para_decl_many = 8
    RULE_para_decl_one = 9
    RULE_block_stmt = 10
    RULE_body = 11
    RULE_stmt = 12
    RULE_exp = 13
    RULE_exp1 = 14
    RULE_exp2 = 15
    RULE_exp3 = 16
    RULE_exp4 = 17
    RULE_exp5 = 18
    RULE_exp6 = 19
    RULE_exp7 = 20
    RULE_index_exp = 21
    RULE_exp8 = 22
    RULE_operand = 23
    RULE_func_call = 24
    RULE_if_stmt = 25
    RULE_for_stmt = 26
    RULE_while_stmt = 27
    RULE_brk_stmt = 28
    RULE_cont_stmt = 29
    RULE_return_stmt = 30

    ruleNames =  [ "program", "var_decl", "mctype", "arr_one", "func_decl", 
                   "types", "arr_ptr", "para_decl_list", "para_decl_many", 
                   "para_decl_one", "block_stmt", "body", "stmt", "exp", 
                   "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", "exp7", 
                   "index_exp", "exp8", "operand", "func_call", "if_stmt", 
                   "for_stmt", "while_stmt", "brk_stmt", "cont_stmt", "return_stmt" ]

    EOF = Token.EOF
    WS=1
    LINE_COMMENT=2
    BLOCK_COMMENT=3
    BOOLEAN=4
    BREAK=5
    CONTINUE=6
    ELSE=7
    FOR=8
    FLOAT=9
    IF=10
    INT=11
    RETURN=12
    VOID=13
    DO=14
    WHILE=15
    TRUE=16
    FALSE=17
    STRING=18
    ID=19
    ADD=20
    SUB=21
    MUL=22
    DIV=23
    MOD=24
    LOG_NOT=25
    LOG_OR=26
    LOG_AND=27
    EQUAL=28
    NOT_EQUAL=29
    LESS=30
    LESS_EQ=31
    GREATER=32
    GREATER_EQ=33
    ASSIGN=34
    LS=35
    RS=36
    LB=37
    RB=38
    LP=39
    RP=40
    SEMI=41
    CM=42
    INTLIT=43
    FLOATLIT=44
    BOOLLIT=45
    STRLIT=46
    ERROR_CHAR=47
    UNCLOSE_STRING=48
    ILLEGAL_ESCAPE=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MCParser.EOF, 0)

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Var_declContext)
            else:
                return self.getTypedRuleContext(MCParser.Var_declContext,i)


        def func_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Func_declContext)
            else:
                return self.getTypedRuleContext(MCParser.Func_declContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 64
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 62
                    self.var_decl()
                    pass

                elif la_ == 2:
                    self.state = 63
                    self.func_decl()
                    pass


                self.state = 66 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.BOOLEAN) | (1 << MCParser.FLOAT) | (1 << MCParser.INT) | (1 << MCParser.VOID) | (1 << MCParser.STRING))) != 0)):
                    break

            self.state = 68
            self.match(MCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mctype(self):
            return self.getTypedRuleContext(MCParser.MctypeContext,0)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.ID)
            else:
                return self.getToken(MCParser.ID, i)

        def arr_one(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Arr_oneContext)
            else:
                return self.getTypedRuleContext(MCParser.Arr_oneContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.CM)
            else:
                return self.getToken(MCParser.CM, i)

        def getRuleIndex(self):
            return MCParser.RULE_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = MCParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.mctype()
            self.state = 78
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 76
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        self.state = 71
                        self.match(MCParser.ID)
                        self.state = 72
                        self.match(MCParser.CM)
                        pass

                    elif la_ == 2:
                        self.state = 73
                        self.arr_one()
                        self.state = 74
                        self.match(MCParser.CM)
                        pass

             
                self.state = 80
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 81
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.state = 82
                self.arr_one()
                pass


            self.state = 85
            self.match(MCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MctypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MCParser.BOOLEAN, 0)

        def INT(self):
            return self.getToken(MCParser.INT, 0)

        def FLOAT(self):
            return self.getToken(MCParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MCParser.STRING, 0)

        def getRuleIndex(self):
            return MCParser.RULE_mctype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMctype" ):
                return visitor.visitMctype(self)
            else:
                return visitor.visitChildren(self)




    def mctype(self):

        localctx = MCParser.MctypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_mctype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.BOOLEAN) | (1 << MCParser.FLOAT) | (1 << MCParser.INT) | (1 << MCParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arr_oneContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_arr_one

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArr_one" ):
                return visitor.visitArr_one(self)
            else:
                return visitor.visitChildren(self)




    def arr_one(self):

        localctx = MCParser.Arr_oneContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arr_one)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(MCParser.ID)
            self.state = 90
            self.match(MCParser.LS)
            self.state = 91
            self.match(MCParser.INTLIT)
            self.state = 92
            self.match(MCParser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def types(self):
            return self.getTypedRuleContext(MCParser.TypesContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(MCParser.Block_stmtContext,0)


        def para_decl_list(self):
            return self.getTypedRuleContext(MCParser.Para_decl_listContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_func_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):

        localctx = MCParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.types()
            self.state = 95
            self.match(MCParser.ID)
            self.state = 96
            self.match(MCParser.LB)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.BOOLEAN) | (1 << MCParser.FLOAT) | (1 << MCParser.INT) | (1 << MCParser.STRING))) != 0):
                self.state = 97
                self.para_decl_list()


            self.state = 100
            self.match(MCParser.RB)
            self.state = 101
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mctype(self):
            return self.getTypedRuleContext(MCParser.MctypeContext,0)


        def VOID(self):
            return self.getToken(MCParser.VOID, 0)

        def arr_ptr(self):
            return self.getTypedRuleContext(MCParser.Arr_ptrContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_types

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypes" ):
                return visitor.visitTypes(self)
            else:
                return visitor.visitChildren(self)




    def types(self):

        localctx = MCParser.TypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_types)
        try:
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.mctype()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.match(MCParser.VOID)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 105
                self.arr_ptr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arr_ptrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MCParser.BOOLEAN, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def INT(self):
            return self.getToken(MCParser.INT, 0)

        def FLOAT(self):
            return self.getToken(MCParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MCParser.STRING, 0)

        def getRuleIndex(self):
            return MCParser.RULE_arr_ptr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArr_ptr" ):
                return visitor.visitArr_ptr(self)
            else:
                return visitor.visitChildren(self)




    def arr_ptr(self):

        localctx = MCParser.Arr_ptrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arr_ptr)
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.BOOLEAN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.match(MCParser.BOOLEAN)
                self.state = 109
                self.match(MCParser.LS)
                self.state = 110
                self.match(MCParser.RS)
                pass
            elif token in [MCParser.INT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.match(MCParser.INT)
                self.state = 112
                self.match(MCParser.LS)
                self.state = 113
                self.match(MCParser.RS)
                pass
            elif token in [MCParser.FLOAT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.match(MCParser.FLOAT)
                self.state = 115
                self.match(MCParser.LS)
                self.state = 116
                self.match(MCParser.RS)
                pass
            elif token in [MCParser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 117
                self.match(MCParser.STRING)
                self.state = 118
                self.match(MCParser.LS)
                self.state = 119
                self.match(MCParser.RS)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Para_decl_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def para_decl_one(self):
            return self.getTypedRuleContext(MCParser.Para_decl_oneContext,0)


        def para_decl_many(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Para_decl_manyContext)
            else:
                return self.getTypedRuleContext(MCParser.Para_decl_manyContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_para_decl_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPara_decl_list" ):
                return visitor.visitPara_decl_list(self)
            else:
                return visitor.visitChildren(self)




    def para_decl_list(self):

        localctx = MCParser.Para_decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_para_decl_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 122
                    self.para_decl_many() 
                self.state = 127
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 128
            self.para_decl_one()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Para_decl_manyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mctype(self):
            return self.getTypedRuleContext(MCParser.MctypeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def CM(self):
            return self.getToken(MCParser.CM, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_para_decl_many

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPara_decl_many" ):
                return visitor.visitPara_decl_many(self)
            else:
                return visitor.visitChildren(self)




    def para_decl_many(self):

        localctx = MCParser.Para_decl_manyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_para_decl_many)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.mctype()
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 131
                self.match(MCParser.ID)
                self.state = 132
                self.match(MCParser.CM)
                pass

            elif la_ == 2:
                self.state = 133
                self.match(MCParser.ID)
                self.state = 134
                self.match(MCParser.LS)
                self.state = 135
                self.match(MCParser.RS)
                self.state = 136
                self.match(MCParser.CM)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Para_decl_oneContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mctype(self):
            return self.getTypedRuleContext(MCParser.MctypeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_para_decl_one

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPara_decl_one" ):
                return visitor.visitPara_decl_one(self)
            else:
                return visitor.visitChildren(self)




    def para_decl_one(self):

        localctx = MCParser.Para_decl_oneContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_para_decl_one)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.mctype()
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 140
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.state = 141
                self.match(MCParser.ID)
                self.state = 142
                self.match(MCParser.LS)
                self.state = 143
                self.match(MCParser.RS)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MCParser.LP, 0)

        def RP(self):
            return self.getToken(MCParser.RP, 0)

        def body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.BodyContext)
            else:
                return self.getTypedRuleContext(MCParser.BodyContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_block_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock_stmt" ):
                return visitor.visitBlock_stmt(self)
            else:
                return visitor.visitChildren(self)




    def block_stmt(self):

        localctx = MCParser.Block_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_block_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(MCParser.LP)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.BOOLEAN) | (1 << MCParser.BREAK) | (1 << MCParser.CONTINUE) | (1 << MCParser.FOR) | (1 << MCParser.FLOAT) | (1 << MCParser.IF) | (1 << MCParser.INT) | (1 << MCParser.RETURN) | (1 << MCParser.DO) | (1 << MCParser.TRUE) | (1 << MCParser.FALSE) | (1 << MCParser.STRING) | (1 << MCParser.ID) | (1 << MCParser.SUB) | (1 << MCParser.LOG_NOT) | (1 << MCParser.LB) | (1 << MCParser.LP) | (1 << MCParser.INTLIT) | (1 << MCParser.FLOATLIT) | (1 << MCParser.STRLIT))) != 0):
                self.state = 147
                self.body()
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 153
            self.match(MCParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(MCParser.Var_declContext,0)


        def stmt(self):
            return self.getTypedRuleContext(MCParser.StmtContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = MCParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_body)
        try:
            self.state = 157
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.BOOLEAN, MCParser.FLOAT, MCParser.INT, MCParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.var_decl()
                pass
            elif token in [MCParser.BREAK, MCParser.CONTINUE, MCParser.FOR, MCParser.IF, MCParser.RETURN, MCParser.DO, MCParser.TRUE, MCParser.FALSE, MCParser.ID, MCParser.SUB, MCParser.LOG_NOT, MCParser.LB, MCParser.LP, MCParser.INTLIT, MCParser.FLOATLIT, MCParser.STRLIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_stmt(self):
            return self.getTypedRuleContext(MCParser.If_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(MCParser.For_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(MCParser.While_stmtContext,0)


        def brk_stmt(self):
            return self.getTypedRuleContext(MCParser.Brk_stmtContext,0)


        def cont_stmt(self):
            return self.getTypedRuleContext(MCParser.Cont_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(MCParser.Return_stmtContext,0)


        def exp(self):
            return self.getTypedRuleContext(MCParser.ExpContext,0)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(MCParser.Block_stmtContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_stmt
